# taxi_service

./: README.md  pyproject.toml  requirements.txt
taxi/: forms.py  models.py  views.py
taxi/tests/: test_admin.py  test_forms.py  test_models.py  test_views.py
taxi_service/: settings.py  urls.py
templates/includes/: pagination.html  sidebar.html
templates/registration/: login.html
templates/taxi/: car_form.html  car_list.html  driver_form.html  manufacturer_form.html
