[tool.poetry]
name = "taxi_service"
version = "0.1.0"
description = ""
authors = ["Dmitry Ivanov <karward94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
