[tool.poetry]
name = "taxi_service"
version = "0.1.0"
description = "Django project for managing drivers, cars and manufacturers for Taxi Service, with support of authentication."
authors = ["Dmitry Ivanov <dmitro.ivanov.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-crispy-forms = "^1.14.0"
django-debug-toolbar = "^3.2.4"
license = "^0.1a3"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
whitenoise = "^6.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
